[gd_scene load_steps=12 format=2]

[ext_resource path="res://Elements.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/board1.png" type="Texture" id=3]
[ext_resource path="res://mainmenu2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Level14.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.5, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 27.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30, 10 )

[sub_resource type="RectangleShape2D" id=6]

[node name="Level14" type="Node2D"]
script = ExtResource( 5 )

[node name="Board1" type="Sprite" parent="."]
position = Vector2( 180, 180 )
scale = Vector2( 0.330808, 0.331267 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 20, 20 )
cell_custom_transform = Transform2D( 20, 0, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( -65538, 10, 0, -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 10, 0, -131059, 10, 0, -131058, 10, 0, -131057, 10, 0, -131056, 10, 0, -131055, 10, 0, -131054, 10, 0, -131053, 10, 0, -2, 10, 0, -65517, 10, 0, 65534, 10, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 19, 10, 0, 131070, 10, 0, 65536, 10, 0, 65537, 9, 0, 65539, 10, 0, 65540, 1, 0, 65544, 1, 0, 65545, 10, 0, 65546, 5, 0, 65549, 3, 0, 65552, 1, 0, 65553, 10, 0, 65555, 10, 0, 196606, 10, 0, 131072, 10, 0, 131075, 10, 0, 131078, 10, 0, 131081, 10, 0, 131082, 10, 0, 131083, 10, 0, 131084, 10, 0, 131085, 10, 0, 131086, 10, 0, 131088, 1, 0, 131089, 10, 0, 131091, 10, 0, 262142, 10, 0, 196608, 10, 0, 196611, 10, 0, 196614, 10, 0, 196617, 10, 0, 196618, 1, 0, 196624, 1, 0, 196625, 10, 0, 196627, 10, 0, 327678, 10, 0, 262144, 10, 0, 262145, 3, 0, 262146, 3, 0, 262147, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 1, 0, 262153, 10, 0, 262154, 1, 0, 262156, 10, 0, 262157, 10, 0, 262158, 10, 0, 262159, 10, 0, 262160, 10, 0, 262161, 10, 0, 262163, 10, 0, 393214, 10, 0, 327680, 10, 0, 327683, 10, 0, 327685, 1, 0, 327686, 10, 0, 327689, 10, 0, 327690, 1, 0, 327696, 1, 0, 327697, 10, 0, 327699, 10, 0, 458750, 10, 0, 393216, 10, 0, 393219, 10, 0, 393222, 10, 0, 393225, 10, 0, 393226, 10, 0, 393227, 10, 0, 393228, 10, 0, 393229, 10, 0, 393230, 10, 0, 393232, 1, 0, 393233, 10, 0, 393235, 10, 0, 524286, 10, 0, 458752, 10, 0, 458753, 1, 0, 458755, 10, 0, 458758, 10, 0, 458760, 1, 0, 458761, 10, 0, 458762, 1, 0, 458768, 1, 0, 458769, 10, 0, 458771, 10, 0, 589822, 10, 0, 524288, 10, 0, 524289, 10, 0, 524291, 10, 0, 524292, 10, 0, 524294, 10, 0, 524297, 10, 0, 524298, 1, 0, 524300, 10, 0, 524301, 10, 0, 524302, 10, 0, 524303, 10, 0, 524304, 10, 0, 524305, 10, 0, 524307, 10, 0, 655358, 10, 0, 589824, 10, 0, 589827, 10, 0, 589828, 1, 0, 589830, 10, 0, 589833, 10, 0, 589834, 1, 0, 589840, 1, 0, 589841, 10, 0, 589843, 10, 0, 720894, 10, 0, 655360, 10, 0, 655363, 10, 0, 655366, 10, 0, 655367, 1, 0, 655369, 10, 0, 655370, 10, 0, 655371, 10, 0, 655372, 10, 0, 655373, 10, 0, 655374, 10, 0, 655376, 1, 0, 655377, 10, 0, 655379, 10, 0, 786430, 10, 0, 720896, 10, 0, 720898, 1, 0, 720899, 10, 0, 720902, 10, 0, 720905, 10, 0, 720906, 1, 0, 720912, 1, 0, 720913, 10, 0, 720915, 10, 0, 851966, 10, 0, 786432, 10, 0, 786434, 10, 0, 786435, 10, 0, 786437, 10, 0, 786438, 10, 0, 786441, 10, 0, 786442, 1, 0, 786444, 10, 0, 786445, 10, 0, 786446, 10, 0, 786447, 10, 0, 786448, 10, 0, 786449, 10, 0, 786451, 10, 0, 917502, 10, 0, 851968, 10, 0, 851971, 10, 0, 851973, 1, 0, 851974, 10, 0, 851976, 1, 0, 851977, 10, 0, 851978, 1, 0, 851984, 1, 0, 851985, 10, 0, 851987, 10, 0, 983038, 10, 0, 917504, 10, 0, 917507, 10, 0, 917510, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917520, 1, 0, 917521, 10, 0, 917523, 10, 0, 1048574, 10, 0, 983040, 10, 0, 983041, 1, 0, 983043, 10, 0, 983046, 10, 0, 983049, 10, 0, 983056, 1, 0, 983057, 10, 0, 983059, 10, 0, 1114110, 10, 0, 1048576, 10, 0, 1048577, 10, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 10, 0, 1048583, 1, 0, 1048585, 3, 0, 1048592, 1, 0, 1048593, 10, 0, 1048595, 10, 0, 1179646, 10, 0, 1114112, 10, 0, 1114113, 10, 0, 1114114, 10, 0, 1114115, 10, 0, 1114116, 10, 0, 1114117, 10, 0, 1114118, 10, 0, 1114119, 10, 0, 1114120, 10, 0, 1114121, 10, 0, 1114122, 10, 0, 1114123, 10, 0, 1114124, 10, 0, 1114125, 10, 0, 1114126, 10, 0, 1114127, 10, 0, 1114128, 10, 0, 1114129, 10, 0, 1114131, 10, 0, 1245182, 10, 0, 1179667, 10, 0, 1310718, 10, 0, 1310719, 10, 0, 1245184, 10, 0, 1245185, 10, 0, 1245186, 10, 0, 1245187, 10, 0, 1245188, 10, 0, 1245189, 10, 0, 1245190, 10, 0, 1245191, 10, 0, 1245192, 10, 0, 1245193, 10, 0, 1245194, 10, 0, 1245195, 10, 0, 1245196, 10, 0, 1245197, 10, 0, 1245198, 10, 0, 1245199, 10, 0, 1245200, 10, 0, 1245201, 10, 0, 1245202, 10, 0, 1245203, 10, 0, 11665566, 5, 0 )

[node name="Camera2D" type="Camera2D" parent="TileMap"]
position = Vector2( 180, 180 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="Exit" type="Area2D" parent="."]

[node name="Exit" type="CollisionShape2D" parent="Exit"]
position = Vector2( 212, 32 )
shape = SubResource( 1 )

[node name="musicbakcground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.362
pitch_scale = 0.73
autoplay = true

[node name="Screen" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen"]
position = Vector2( 42, 91 )
shape = SubResource( 4 )

[node name="Damage" type="Area2D" parent="."]

[node name="Damage" type="CollisionShape2D" parent="Damage"]
position = Vector2( 92, 32 )
shape = SubResource( 2 )

[node name="Damage2" type="CollisionShape2D" parent="Damage"]
position = Vector2( 32, 152 )
shape = SubResource( 2 )

[node name="Damage3" type="CollisionShape2D" parent="Damage"]
position = Vector2( 52, 232 )
shape = SubResource( 2 )

[node name="Damage4" type="CollisionShape2D" parent="Damage"]
position = Vector2( 32, 312 )
shape = SubResource( 2 )

[node name="Damage5" type="CollisionShape2D" parent="Damage"]
position = Vector2( 112, 272 )
shape = SubResource( 2 )

[node name="Damage6" type="CollisionShape2D" parent="Damage"]
position = Vector2( 92, 192 )
shape = SubResource( 2 )

[node name="Damage7" type="CollisionShape2D" parent="Damage"]
position = Vector2( 112, 112 )
shape = SubResource( 2 )

[node name="Damage8" type="CollisionShape2D" parent="Damage"]
position = Vector2( 152, 92 )
shape = SubResource( 2 )

[node name="Damage9" type="CollisionShape2D" parent="Damage"]
position = Vector2( 172, 152 )
shape = SubResource( 2 )

[node name="Damage10" type="CollisionShape2D" parent="Damage"]
position = Vector2( 152, 212 )
shape = SubResource( 2 )

[node name="Damage21" type="CollisionShape2D" parent="Damage"]
position = Vector2( 332, 332 )
shape = SubResource( 2 )

[node name="Damage11" type="CollisionShape2D" parent="Damage"]
position = Vector2( 171.5, 271 )
shape = SubResource( 2 )

[node name="Damage12" type="CollisionShape2D" parent="Damage"]
position = Vector2( 152, 332 )
shape = SubResource( 2 )

[node name="Damage13" type="CollisionShape2D" parent="Damage"]
position = Vector2( 172, 32 )
shape = SubResource( 2 )

[node name="Damage14" type="CollisionShape2D" parent="Damage"]
position = Vector2( 212, 91.25 )
shape = SubResource( 3 )

[node name="Damage15" type="CollisionShape2D" parent="Damage"]
position = Vector2( 212, 172 )
shape = SubResource( 3 )

[node name="Damage16" type="CollisionShape2D" parent="Damage"]
position = Vector2( 212, 252 )
shape = SubResource( 3 )

[node name="Damage17" type="CollisionShape2D" parent="Damage"]
position = Vector2( 332, 52 )
shape = SubResource( 3 )

[node name="Damage18" type="CollisionShape2D" parent="Damage"]
position = Vector2( 332, 132 )
shape = SubResource( 3 )

[node name="Damage19" type="CollisionShape2D" parent="Damage"]
position = Vector2( 332, 212 )
shape = SubResource( 3 )

[node name="Damage20" type="CollisionShape2D" parent="Damage"]
position = Vector2( 332, 292 )
shape = SubResource( 3 )

[node name="Screen2" type="Area2D" parent="."]

[node name="Screen2" type="CollisionShape2D" parent="Screen2"]
position = Vector2( 92, 332 )
shape = SubResource( 5 )

[node name="Screen3" type="Area2D" parent="."]

[node name="Screen3" type="CollisionShape2D" parent="Screen3"]
position = Vector2( 192, 332 )
shape = SubResource( 6 )

[node name="Screen4" type="Area2D" parent="."]

[node name="Screen3" type="CollisionShape2D" parent="Screen4"]
position = Vector2( 272, 32 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="Screen" to="." method="_on_Screen_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="body_entered" from="Screen2" to="." method="_on_Screen2_body_entered"]
[connection signal="body_entered" from="Screen3" to="." method="_on_Screen3_body_entered"]
[connection signal="body_entered" from="Screen4" to="." method="_on_Screen4_body_entered"]
